src/components/_homepage/testimonials.module.scss
@import '../../base/module';

.flex {
  display: block;

  @media (min-width: $tablet) {
    display: flex;
  }
}

.testimonials {
  padding-top: 80px;
  overflow: hidden;

  .testimonial-container {
    padding-top: 20px;
    padding-bottom: $v-padding;
    position: relative;
  }

  @media (min-width: $desktop) {
    margin-top: 0;
    padding-top: $v-padding;
  }
}

.quotes {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  width: 100%;
  max-width: width(12);

  @media (min-width: $tablet) {
    max-width: width(9);
  }

  @media (min-width: $desktop) {
    max-width: width(9);
  }
}

.quotesHead {
  font-size: 1.29em;
  font-family: $font-secondary;

  line-height: 1.62rem;
  letter-spacing: 0.15rem;
  margin-bottom: 50px;
}

.quotesHead p {
  text-transform: uppercase;
  font-weight: 600;
}

.quotesHead h2 {
  font-family: $font-header;
  font-size: 3.25em;
  font-style: italic;
  font-weight: 400;
}

.quoteWrap {
  max-width: 0;
  width: 0;
  visibility: hidden;
  position: relative;
  display: none;
  padding: 80px 0 0 0;
  margin-top: 20px;
  font-size: 0.75em;

  p {
    font-size: 1.3em;
  }

  @media (min-width: $desktop) {
    padding: 60px 140px 0 40px;
    margin-top: 0;

    p {
      font-size: 1.56em;
    }
  }
}

.quoteWrapActive {
  @extend .quoteWrap;
  max-width: 100%;
  width: 100%;
  visibility: visible;
  display: block;
  flex: 1;
}

.author {
  line-height: 28px;
  font-family: $font-secondary;
  font-weight: 600;
  text-align: center;
  letter-spacing: 0.04em;
  color: $color-black;
  display: block;
  width: max-content;
  padding: 13px 0px;
  background-color: $color-darkgreen;
  border-radius: $bradius;
  margin-top: 15px;
  text-transform: uppercase;

  @media (min-width: $desktop) {
    font-size: 27px;
    margin-top: 60px;
  }
}

.imageWrap {
  aspect-ratio: 1/1;
  position: absolute;
  overflow: hidden;
  display: none;

  .image {
    min-width: 100%;
    min-height: 100%;
  }

  > div {
    height: auto;
  }

  @media (min-width: $tablet) {
    display: flex;
    align-items: center;
    justify-content: center;
    top: 50%;
    transform: translateY(-50%);
    position: absolute;
    width: 300px;
    right: 1%;
  }
  @media (min-width: $desktop) {
    width: 450px;
  }
}

.controlWrap {
  display: flex;
  width: 100%;
  margin-top: 1.62rem;
}

.quoteControls {
  display: flex;
  justify-content: flex-start;
  gap: 15px;
  align-items: center;

  font-size: 1.25em;
  border-radius: $bradius 0 0 $bradius;
  line-height: 1.5em;
  @media (min-width: $desktop) {
    padding: 10px 2.5rem;
  }

  .dotList {
    display: flex;
    gap: 10px;
    align-items: center;
    padding-top: 2px;

    > div {
      width: 15px;
      height: 15px;
      border: 1px solid $color-black;
      border-radius: 99em;

      &.activeDot {
        background: $color-forestgreen;
      }
    }
  }
}

.nextBtn {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 50px;
  border-radius: 0 $bradius $bradius 0;
  color: $color-forestgreen;
  cursor: pointer;
  svg {
    font-size: 26px;
  }
}

.counter {
  font-size: 1.2em;
  font-family: $font-secondary;
}

